# eyre_c

./: .gitignore  CMakeLists.txt  encodings.txt  generator.c  notes.txt  test.eyre  test.txt
src/: assemble.c  assemble.h  assembler.c  buffer.h  defs.c  defs.h  encodings.c  encodings.h  enums.c  enums.h  eyre.c  eyre.h  gen.c  gen.h  generator.c  intern.c  intern.h  internal.c  internal.h  lex.c  lex.h  lexer.c  link.c  link.h  linker.c  log.c  log.h  main.c  mnemonics.c  mnemonics.h  nodes.h  parse.c  parse.h  parser.c  resolve.c  resolve.h  symbol.c  symbol.h  symbols.h
